# scrooge-goose

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: build-deploy.yaml  test.yaml
.github/workflows/composite/build-and-push/: action.yaml
.github/workflows/composite/test/: action.yaml
backend/: Cargo.toml
backend/migrations/: V0001__users_and_expenses.sql  V0002__full_refactor.sql
backend/src/: error.rs  extractors.rs  logger.rs  main.rs  middlewares.rs  server.rs  services.rs  settings.rs  state.rs
backend/src/managers/: local_http.rs  mod.rs
backend/src/managers/db/: constants.rs  error.rs  mod.rs  models.rs  queries.rs
backend/src/routes/: mod.rs
backend/src/routes/api/: balance.rs  categories.rs  expenses.rs  health.rs  mod.rs  users.rs
web/: .gitignore  eslint.config.js  index.html  package.json  panda.config.ts  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsconfig.lint.json  vite.config.ts
web/src/: app.tsx  main.tsx
web/src/hooks/: createBackendClient.ts
web/src/pages/: home.tsx
web/src/pages/internal/: notFound.tsx
