[package]
name = "scrooge-goose-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-server = "0.7.2"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = "0.12.23"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[lints.clippy]
uninlined_format_args = "allow"
