[package]
name = "scrooge-goose-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-server = "0.7.2"
clap = { version = "4.5.47", features = ["derive", "env"] }
deadpool-postgres = "0.14.1"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[lints.clippy]
uninlined_format_args = "allow"
